--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,20 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.4.24",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0",
-        "laravelcollective/html": "~5.7",
-        "realrashid/sweet-alert": "^1.1",
-        "spatie/laravel-permission": "^2.36"
+        "laravel/framework": "^8.0",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^3.0",
+        "laravelcollective/html": "*",
+        "realrashid/sweet-alert": "^4.1",
+        "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -31,7 +30,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/dusk"
+            ]
         }
     },
     "autoload": {
@@ -48,6 +49,7 @@
             "Tests\\": "tests/"
         }
     },
+    
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
